# Projeto-Json

./: README.md  projeto-json.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/9cd6d8fd/: cabal_macros.h
.stack-work/ghci/a3785bfe/: cabal_macros.h
.stack-work/install/72bc9c57/lib/x86_64-windows-ghc-9.6.6/projeto-json-0.1.0.0-5ttTvUDGzi0GJ12n7A7is2/: SimpleJSON.hi
.stack-work/install/72bc9c57/pkgdb/: package.cache  projeto-json-0.1.0.0-5ttTvUDGzi0GJ12n7A7is2.conf
app/: main.hs
src/: PrettyJSON.hs  ToJSON.hs
