-- This file should only contain Cabal package metadata.
-- Move your Haskell source code to a file like src/SimpleJSON.hs or SimpleJSON.hs,
-- and keep only the package description here.

-- Example .cabal file content:
name:                projeto-json
version:             0.1.0.0
synopsis:            Simple JSON library
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SimpleJSON
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010